architect-stage-5-container/29-Kubernetes/nginx.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: web_server
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        volumeMounts:
        - mountPath: /mnt/empdir
          name: shared-volume
      volumes:
      - name: shared-volume
        secret:
          secretName: mysecret
          items:
          - key: username
            path: my/myusername
          - key: password
            path: my/mypassword
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: web_server
  ports:
  - protocol: TCP
    nodePort: 30000
    port: 8080
    targetPort: 80
---
---
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: web_server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 80
---
---
---
---
#Nginx Pod
---
apiVersion: v1
kind: Pod
metadata:
  name: mynginx
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    volumeMounts:
    - mountPath: /mnt
      name: mount-volume
  volumes:
  - name: mount-volume
    emptyDir: {}

    volumeMounts:
    - mountPath: /etc/myinfo
      name: myinfo
      readOnly: true
  volumes:
  - name: secret
    secret:
      secretName: mysecret
